# fatfs-embedded

./: Cargo.toml  LICENSE  README.md  build.rs
fatfs/source/: diskio.c  ff.c  ff.h  ffconf.h
src/: lib.rs
src/fatfs/: diskio.rs  inc_bindings.rs
src/fatfs/diskio/: diskio_bindings.rs
tests/: simulated_driver.rs  tests.rs
