[package]
name = "fatfs-embedded"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
cc = "1"
bindgen = "0.69"

[dependencies]
bitflags = "2.4.2"
embassy-futures = "0.1.1"
cty = "0.2.2"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[target.'cfg(not(target_os = "none"))'.dependencies]
embassy-sync = { version = "0.5.0", features = ["std"] }
chrono = { version = "0.4.3", optional = true }

[target.'cfg(target_os = "none")'.dependencies]
embassy-sync = { version = "0.5.0" }
chrono = { version = "0.4.3", default-features = false, optional = true }